# 1brc-hs

./: .gitignore  1brc-hs.cabal  README.md  flake.nix
src/: Main.hs  Main_v1.hs  Main_v2_bytestring.hs
